--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.side-bar {
+  height: 100% !important;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-right: 2px solid;
+  border-radius: 0;
+  border-color: rgba(92, 38, 109, 0.693);
+  background-color: rgb(233, 223, 165);
+  transition: 0.8s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.toggle-menu {
+  height: 50px;
+  border-top-right-radius: 10rem;
+  border-bottom-right-radius: 9rem;
+  width: 10px;
+  position: absolute;
+  outline: none;
+  z-index: 1;
+  background-color: rgba(92, 38, 109, 0.693);
+  border-color: rgba(108, 119, 88, 0.693);
+  border-left: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.boards-button {
+  text-decoration: none;
+  width: 50px;
+  background-color: rgb(160, 55, 151);
+  font: 20px;
+  width: 50%;
+  margin-left: 22%;
 }
